feat: add user registration with sql transactions
